--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,10 @@
 
+  ## 6/2/2023 - [德语媒体:供应链法让欧企将市场让与中国](https://www.dw.com/zh/德语媒体-供应链法让欧企将市场让与中国/a-65807774?maca=chi-rss-chi-all-1127-rdf)
+ ```《商报》刊发评论指出，中国经济疲软也将让依赖对华出口的德国企业蒙受损失。《法兰克福汇报》则担心，旨在让欧洲企业为境外供应链承担社会与环境责任的欧盟供应链法案，很可能会导致欧洲人将市场拱手让给努力拓展经济影响力的中国。```0
+  ## 6/2/2023 - [李辉呼吁停止输送武器 中国或再派员促谈](https://www.dw.com/zh/李辉呼吁停止输送武器-中国或再派员促谈/a-65808037?maca=chi-rss-chi-all-1127-rdf)
+ ```中国特使李辉结束对乌克兰、俄罗斯等国的访问后在北京举行记者会。他批评美媒称他提议的停火将让俄罗斯控制乌克兰部分领土。但有记者提问中国在如何处理乌克兰被占领土问题上的立场时，他未予直接回应。```0
+  ## 6/2/2023 - [《小美人魚》中國票房差 種族歧視作祟？](https://www.dw.com/zh/《小美人魚》中國票房差-種族歧視作祟？/a-65804107?maca=chi-rss-chi-all-1127-rdf)
+ ```由黑人擔綱女主角的迪士尼真人版電影《小美人魚》，受到美國觀眾支持、中國民眾冷落，上映後更遭中國官媒批評「過度政治正確」、敘事手法「懶惰」。事件背後，隱藏著哪些更深層的議題？```0
   ## 6/2/2023 - [RCEP对15个签署国全面生效](https://www.dw.com/zh/rcep对15个签署国全面生效/a-65804548?maca=chi-rss-chi-all-1127-rdf)
  ```据中国商务部官网消息，6月2日，《区域全面经济伙伴关系协定》（RCEP）对菲律宾正式生效，标志着RCEP对15个成员国全面生效。```0
   ## 6/2/2023 - [瑞士拒绝他国援乌瑞士军火 恪守中立引争议](https://www.dw.com/zh/瑞士拒绝他国援乌瑞士军火-恪守中立引争议/a-65803626?maca=chi-rss-chi-all-1127-rdf)
@@ -79,16 +85,14 @@
  ```德语媒体认为，中国特使李辉此次访问欧洲，并没有让西方国家留下中国真的有意调解俄乌战争的印象，对于乌克兰问题的计划仍然模糊不清，其真实的意图是建立维护和平的大国形象。```0
   ## 5/26/2023 - [管住嘴或邁開腿？言論審查下的中國脫口秀](https://www.dw.com/zh/管住嘴或邁開腿？言論審查下的中國脫口秀/a-65739237?maca=chi-rss-chi-all-1127-rdf)
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
-  ## 5/25/2023 - [德语媒体：中美相争 印度得利](https://www.dw.com/zh/德语媒体：中美相争-印度得利/a-65735624?maca=chi-rss-chi-all-1127-rdf)
- ```周日夜间，中国政府宣布禁止处理关键信息的公司购买总部位于爱达荷州博伊西的美光公司生产的微芯片。稍后，美国电商巨头亚马逊则宣布，从七月开始退出中国市场。种种迹象显示，中美两国间地缘政治的博弈对高科技领域的影响也在逐渐扩大。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
-  ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
- ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
  ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
   ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
  ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
+  ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
+ ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
