--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,10 @@
 
+  ## 6/2/2023 - [六四34周年特别报导：接过广场上话筒的女青年](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/al-06022023095528.html)
+ ```六四34周年之际，“白纸运动”后站出来的海外中国留学生，将首次以他们的方式纪念“六四”。其实在“白纸运动”期间，海内外大批中国女性勇敢发出反抗极权的声音。她们对“六四”有什么看法？她们又如何连结当年八九学运的女性领袖？ 【我是怎么知道六四的】来信节选华尔街日报:白纸运动参与者曹芷馨入狱四个月后获释对话郑楚然：女权的成功是一个过程习近平发妇女节祝福　人权组织促释放女性政治犯 “自由中国！这仍是我们的责任！共产党下台！习近平下台！六四不是历史！而是我们的政治现实！”刚在英国完成大学本科最后一年课程的雀氏，这天站在伦敦特拉法加广场的一角。在两个男生中间，穿着粉色外套的她格外显眼。她拿起话筒大声呼喊，向途人介绍何谓“六四”，并宣传一周后由她参与举办的“六四”纪念活动。  “白纸运动”女青年：我不是一个乖乖的小女孩了即使喊到嗓子嘶哑，她仍努力保持声浪。“上街你要做什么？就是要喊大声啊，你就是要抢话语权啊！一直以来都是男性比较容易抢话语权，为什么？因为女性被规顺，让你不要说话，然后男性的声音一直会没过女性。那么我就是意识到这一点，所以从那以后我一直大声说话，我不是一个乖乖的小女孩了。”去年年底，受“四通桥勇士”彭载舟（本名彭立发）启发，雀氏开始在伦敦参与“海报运动”，在校园张贴反封控、支持自由民主的海报，从而认识一群志同道合的在英中国留学生，并成立了非营利组织“ChinaDeviants”（暂译“中国反贼”）。 由在英中国留学生成立的非营利组织“ChinaDeviants”（暂译“中国反贼”），将举办“六四”纪念活动。（“ChinaDeviants”提供） 作为骨干成员的雀氏，积极主办各种活动，并在英国声援“白纸运动”。“我觉得现在女权主义者会做的一个事情就是，首先是做一些主导的行动。第二个就是说话要大声，大声的把自己的诉求喊出来。”从女权主义反思极权在中国成长、接受受教育，雀氏说，她过去对“六四”的认识很模糊，只知道天安门发生了“很糟糕的事情”，直到去到英国留学，被当地同学问起后，她在网上搜索，才真正了解“六四”是怎么一回事。不过对她而言，真正的政治启蒙，是在英国读到的女性主义理论，从而对充满父权色彩的中国国家体系产生怀疑。“我意识到女权是没法跟政治脱离关系的，因为我们要达到我们的权利时，我们必然需要造成一定的政治影响，然后得到一些政治的权利。”雀氏说：“如果要批判共产党，我觉得它不止是一个极权政府，它也是一个非常父权、父系的体系。比如说习近平所做的一些外交手段，就像一个‘强人意识形态’，就是他要做一个强壮的男人似的。在党内的话，女性和少数民族群体也是当花瓶一样。” 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） 被男性主导的八九学运？而另一方面，她也重新反思作为中国反抗运动先河的八九学运。她认为这场运动，更大程度上被男性主导，女性更多担任后勤角色。然而她们的贡献，在过去30多年一直被忽略。“当我学过一些女性主义者比较熟悉的理论，比如说权力等级、力量不平等，以及女性怎样被隐形的方式剥削，以及为何历史上女性总是被抹去。这个其实跟六四也有一定关联，六四期间有很多女性在努力，但是你会看到拍出来的照片，以及留下来的文档之类，实际上是以男性为主。” 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） “我觉得她的观察很尖锐。”八九学运期间，代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数的女性学生领袖。北京市公安局在“六四”后发布的21人通缉名单中，就只有王超华和柴玲两名女性。王超华忆述在1989年4月底、胡耀邦追悼会后几天，她第一次到北大和学生领袖开会时，就是柴玲把她带到男生宿舍，引见给封从德。 代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数女性学生领袖之一。（王超华提供） 她说，当年的普遍现象，就是所有学生领袖的会议，都是在男生宿舍进行，房间里头全是男生，女生更多是从旁协助，使她感受到当中的性别差异：“比如我从我们学校到北大和其他学校，去看运动进行的状况、去了解和交流时，到每一个学校去的一定都是男生宿舍。这些学运的积极份子正在某一个宿舍开会，女生在那边一般都是，积极的女生基本上成了积极男生的秘书，女生基本上是辅助和支援的角色。”王超华在学运期间已经37岁，是学生领袖中年龄较大的研究生，因而获得其他学生领袖的尊重，比较可以不受女性身份束缚、自由发声。回望当年，王超华认为她和柴玲在学运中担当了不同角色，却都无法脱离性别色彩：“我是作为一个年龄比大家年龄大很多，然后可以起到平衡的一个角色。柴玲是作为一个比较弱小，但是充满激情的、纯洁的、理想形的形象。从绝食开始到最后，都有一个很强号召力的形象。” 代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数女性学生领袖之一。（王超华提供） 和雀氏一样，王超华同样认为，女性在八九学运中的角色，在过去30多年一直被边缘化。“当然我一直在那儿，我本身就是一个女性的存在，但是我这个性别的身份，基本上是被边缘化，或者是被抹去的，没有被看作代表了性别的意义。这么长时间，30几年了，您是第一位找到我，从性别的角度来讲六四。30多年啊，虽然身为女性，虽然每年都在讲纪念，但是这个性别角色是在历史上被抹去，或被边缘化。”在八九学运中缺席的女权声音在当年的北京市民吕京花看来，学运中的女性领袖虽然不多，却有很多女性参与了杂务和支援工作。当年在北京开了一家服装店的她，受学生运动感染，干脆关门不做生意，推着自行车为学生募捐、送物资：“我是看着一帮学生端着捐款箱，还有一帮学生在天安门广场绝食呢。然后很多学生是外地的，没吃没喝的，我们老百姓能支持一点就支持吧，因为毕竟是外地孩子嘛。我们能给一点帮助就给吧。”她说，“反正那时候呼哩哗啦，市民都来支持，特别积极地给一些物资。家里买的汽水，一箱一箱给大家端出来，家里包的馒头、包子也都端出来。”吕京花更加入北京工人自治联合会（工自联），组织工人运动。她担任播报员，在天安门广场上播报运动的最新消息，以及各种群众来稿，传播工人及不同群体的声音。回看当时，她说学生和群众有反贪腐、争取工人权益及政治改革的诉求，却几乎没有听到争取女性权利的呼声。 吕京花当年更加入北京工人自治联合会（工自联），组织工人运动。她担任播报员，在天安门广场上播报运动的最新消息。（吕京花提供） “我们受的教育毕竟是传统教育，来束缚我们比较前卫的想法。包括人权啊，在我们眼里都是新单词，都是来到海外才知道。当时对妇女的权利意识有没有？可能有，但是在这场运动当中，它的声音非常弱，似乎没有特意地带出话题，说我们要提高女性的权益。”作为女性，吕京花也承认，30多年前的她完全没有意识要为女权发声。“六四”后政治改革告终女性成政治花瓶王超华也表示，当年她参与北京高校学生对话代表团，当学生准备和政府对话的议题时，女权诉求从未被列入议程当中。然而实际上，她认为八九学运期间的女性社会地位，反而比文革时期倒退，原因是当中共走出文革、走进经济改革以后，包括男女平等等很多社会议题，都被放弃。毛泽东曾提倡“妇女能顶半边天”，鼓励女性走出家庭、投身公共领域。然而王超华认为，随着“六四”后政治改革告终，中国女性的社会地位也愈来愈低─社会传统愈来愈要求女性要规顺乖巧；在政治体制内，女性沦为花瓶，更成为权贵斗争中的牺牲品：“近二、三十年的经济改革，官僚基本上就是权贵，同时有权和钱。打黑打贪的时候，常常就会揪出来，谁谁谁有多少情妇，女性变为政治斗争当中，提供性服务的角色。不光是官场，包括大公司里，都变成一个理所当然、被公开接受的情况。所以这是一个对女性非常不友好的社会现实。” 王超华认为，不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们非常敬佩。（王超华提供） 联合国消除对妇女歧视委员会日前发布的最新报告，指出中共二十大7名政治局常委中没有女性，而24名政治局委员中，也20年来首次没有女性。而十四届中国全国人大中，女性比例不到27%。委员会对中国最高领导层缺少女性感到担忧，敦促中国政府增加决策层以及政府部门的女性人数。委员会也对中国女性人权捍卫者被恐吓和骚扰的报道表达关切。吕京花认为，正是中国目前的体制，才会出现像“铁链女”这样的悲剧。然而习近平的太太彭丽媛，虽然顶着联合国教科文组织“妇女、儿童特使”的头衔，却对“铁链女”的情况不发一言：“彭丽媛对中国妇女作出过什么贡献啊？她不就是一个歌唱演员吗？她有走到基层吗？她了解中国妇女的痛苦吗？如果你要真了解，你真的代表中国女性的话，去年三月就曝光了一个‘铁链女’。彭丽媛还代表中国妇女，在国际妇女代表大会发言，我觉得简直是违背妇女代表的职衔，是不能接受的。”从沉默到爆发从“白纸运动”走出来的中国女性吕京花表示，她在海外中国人权机构任职时，不少中国基层妇女不堪重压，相继冒险致电给她，越洋曝光地方拆迁、劳动教养等社会不公问题，可见中国女性当中，已积累了一定程度对体制的不满。王超华认为，中国社会长久的压迫，使得不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们表示非常敬佩：“白纸运动，我们看到站在前边的，绝大部分都是女生。包括被拘捕的，基本也都是女生，真是非常引人注目的一个社会变迁。可以看到女权主义的意识正在进入新一代，受过教育的女性产生了自觉意识。” 王超华认为，不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们非常敬佩。（王超华提供） 曹芷馨、李元婧、翟登蕊、李思琪，四位在北京亮马桥参与“白纸运动”后被捕的年轻女生，成为了中国新一代女权运动的代表。而愈来愈多中国女性，也在海内外以不同形式发出反抗声音。像雀氏一样，除了纪念“六四”的活动以外，她也努力举办和女性议题相关的活动：“通过让大家认识女性主义，说不定她们会慢慢觉醒一些公民意识，然后就会慢慢去批判整个政治体系。所以反而通过女性主义的一些理论去切入的话，其实对大陆内的影响可能会更大一点。包括你看到在大陆内，其实女权运动就一直没停过。”新一代的中国女性，正接过天安门广场上的话筒，在全球各地大声为她们的女性同胞发声。（由于安全原则，本文中的雀氏为化名。她的声音经过技术处理） 记者：吕熙（伦敦）　责编：嘉远  网编：何足```0
+  ## 6/2/2023 - [纽约六四纪念馆开幕  六四领袖重申追求自由中国决心](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06022023141911.html)
+ ```本周五，筹备两年多的六四纪念馆终于在6月4日前夕于纽约曼哈顿开幕，众多1989年民主运动的领袖、学者、以及海外民运人士皆参与了开幕仪式，而西藏流亡政府精神领袖尊者达赖喇嘛、美国前驻华大使温斯顿·洛德（WinstonLord）以及美国众议员克里斯·史密斯（ChrisSmith）也表达了对纪念馆的支持。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 6月2日，美国纽约的六四纪念馆举办开幕仪式，1989年民主运动领袖王丹、周锋锁、海外民主运动支持者魏京生、王军涛，以及美国著名汉学家林培瑞（PerryLink）皆参与了仪式。达赖喇嘛驻美代表办事处华人联络员慈诚嘉措（TsultrimGyatso）在会上宣读达赖喇嘛的书面致词，达赖喇嘛表示：“1989年中国人发起了民主和平运动来展现人民对于民主自由的渴望。很不幸的是，这起和平运动被中国政府残忍的清洗。不过，这群民主运动的参与者的勇气与决心不只激励了世界，也告诉中国百姓，真正强大的中国不只需要经济富裕，同时也要尊重集体以及个人的人权与自由。”王军涛：我们一定要把天安门广场夺回来会上，中国民主党全国委员会共同主席王军涛也谈到，尽管很多当初参与民主运动的人已经离世，或者放弃对自由民主的追求，但是今日的与会者并不会放弃追求自由中国的理想：“一定要把天安门广场夺回来。不是为了我们自己，是为了正义、为了中国、为了我们死难的同胞、也是为了人类的未来。今天，中共已经成为人类和平以及民主最大的威胁。”美国著名汉学家林培瑞则谈到纪念六四的重要性，他表示，1989年的天安门事件让外界看清中国共产党的本质：“我们记住六四，是因为它是一场大屠杀—不仅是一场镇压；不是一个事故、事件或风波；不是一次反革命暴乱，不是一个模糊的记忆；不像今天中国的一个孩子所能够想起的，一片空白。它不是别的，而是一场大屠杀。”美国国会共和党籍众议员克里斯·史密斯（ChrisSmith）则派代表表达对于六四纪念馆的支持，同时，他也对中国关押政治犯进行了谴责。美国国会及行政当局中国委员会（CECC）人事主任皮耶罗·托齐（PieroTozzi）在会上表示：“我们不会忘记那些被中国当局关押的勇敢人权捍卫者。事实上，史密斯议员即将推出法案要求美国国务院重视高智晟、丁家喜、彭立发等英雄的案件。”纽约六四纪念馆于6月2日举办开幕式（记者唐缘媛摄）周锋锁：一名香港女学生因持有声援六四横幅被捕会上，周锋锁则谈到，本周四，一位香港年轻人曾雨璇因为持有声援六四的国殇之柱横幅，在日前被香港警方以煽动罪逮捕：“当她看到这个横幅被放在纽约时代广场以及世界多地展示时，她跟我也要了一面横幅，她知道这么做很危险，而她现在被逮捕了。因为有像她一样的年轻人，34年前对于民主的希望至今仍存在。对于展示这个横幅，我负起全部的责任，我愿意前往香港代替她承担一切指控。”综合国际媒体报道，曾雨璇为法律博士学生，因为在今年元旦在香港铜锣湾哀悼于2021年铜锣湾刺警案中身亡的抗议人士梁建辉，而在6月1日遭香港警方以煽动罪逮捕，警方在其家中搜查时发现声援六四运动的国殇之柱海报。六四纪念馆六月中起免费参观六四纪念馆将在六月中开放一般民众参观，想参观的民众须在纪念馆的网站上登记。参观纪念馆不需收费，不过馆方欢迎参观的民众捐款，对于捐款事宜，六四纪念馆馆长于大海表示：“我们需要大家的帮忙。过去一年多来，大家在筹备纪念馆时都是无偿帮忙，我们不介意没有报酬，因为纪念馆的成果就是回报。但是，为了让纪念馆的项目延续，我们需要雇用正式员工，所以我们欢迎大家的捐款协助。” 记者：唐缘媛   责编：梒青    网编：洪伟```0
+  ## 6/2/2023 - [失业率再录新高  河南省百日行动"动态清零"毕业生](https://www.rfa.org/mandarin/yataibaodao/jingmao/jw-06022023100721.html)
+ ```又是一年毕业季，随着中国经济的下行趋势，今年的就业形势更不乐观。河南省教育厅日前发起了高校毕业生就业"百日冲刺"行动，要求在百天内对零就业家庭毕业生和长期未就业毕业生实现"动态清零"。分析人士指出，中共一贯的政治性动员只能美化数据，并不能解决问题。 中国经济不见起色　青年失业率创历史新高日企港资关闭中国工厂国企撤招大学生计划 随着中国经济下行，近几年就业率一路低走。据中国多家媒体报道，5月30日，河南省教育厅印发了《河南省2023届高校毕业生就业“百日冲刺”行动工作方案》，引起外界激烈讨论。河南省教育厅印发的《河南省2023届高校毕业生就业“百日冲刺”行动工作方案》截图（河南省政府官网）据中国人力资源和社会保障部的数据显示，2023年中国高校毕业生人数达1158万，继去年这一数字破千万后，再创历史新高。据《大河报》今年一月报道，河南省人力资源和社会保障厅党组书记、厅长张国伟表示，今年河南高校毕业生将达87万，再创历史新高。加上未就业的往届毕业生，中国的就业继续保持严峻态势。旅美时政评论家王剑将河南省这一行动称为“劣质化施政”。他说：“其实我们都知道，包括河南省委、省政府，包括省委书记楼阳生都很清楚，现在大学生找不到工作不是因为有工作他们找不到，而是根本就没有工作。”此外，该方案要求在8月31日前实现有就业意愿和就业能力的残疾毕业生全部落实就业去向；零就业家庭毕业生和长期未就业毕业生“动态清零”。“动态清零”一词的再度出现引外界担忧。就此，在中国社交平台微博上，有网友说“动态清零又来了”、“这四个字让人生理性不适”；还有网友评论“不签就业协议就不发毕业证，这不是常规操作吗？”“这是用红头文件就能解决问题的吗？”该《方案》还指出，全省高校开展“2023届高校毕业生就业促进周”系列活动，进一步实施“百万岗位护航计划”，拓宽市场化就业渠道，提升校园招聘实效，组织实施好基层就业项目。其中包括加强“选调生”、“特岗教师”、“三支一扶”、“西部计划”、“乡村振兴计划”、“医学院校特招毕业生计划”、“大学生乡村医生专项计划”、“城乡社区计划”等基层就业项目的宣传，鼓励毕业生下基层、进部队。参加职业招聘会的中国大学生（美联社资料图） 旅美时事评论人士横河表示，政治动员以解决就业让他想起了上世纪中叶的上山下乡运动。“当地政府就是完成一个任务。因为当前对中共来说社会不稳定因素就是社会问题，特别是年轻人。”他说：“这个跟文革一样的，怕城市里闹事，就把人下放到农村了，所以毛泽东提出的上山下乡就是这个意思。”横河分析指出，民营企业在提供就业岗位中扮演重要角色，但受到中共打压的影响，其就业容量进一步收窄。加之以往三年中共实施的防疫政策影响，经济衰退直接反映在就业难上。《方案》明确，各高校要重点帮扶受疫情影响外出实习较少、升学失利、求职“求稳”和“慢就业”的应届毕业生。引导毕业生积极求职、尽早就业。《方案》特别指出，各高校至少为每名就业困难群体毕业生开展3次谈心谈话、组织参与3次线上线下就业促进活动、推荐3个有效岗位。“百日冲刺”期间，教育部将实行工作周报制度，监督监测工作开展。各高校要加强数据核查，确保就业数据真实准确。王剑认为，这种行政指令无法解决大学生就业问题，最终只会为了保证当地政府的政绩而在数据上弄虚作假。通过美化数据来粉饰太平，只会进一步激化社会矛盾。全美学自联理事陈闯创告诉本台，就业难并非是短暂问题，在接下来的五年里，失业率一路高走将成为可以预见的重大社会问题，政治动员并非解决办法。“这种运动式的手法是中共治国一贯的办法，第二是达不到目标，现在经济形势这么差。只能说把数据做得好像达到一个目标，但有什么实际效果呢？”他说：“这些人是不是有工作本身对习近平不重要，重要的是有没有挑战他的安全。”据中国国家统计局本月中旬公布的统计数据显示，今年四月份全国城镇调查失业率为5.2%。而在16岁至24岁的劳动力中，失业率高达20.4%，这是中国自2018年开始公布这一数字以来的最高水平。 记者：经纬   责编：梒青   网编：洪伟```0
   ## 6/2/2023 - [香港电影院叫停六四当晚包场放映　巧合还是蓄意？](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gf-06022023095327.html)
  ```香港一家电影院原定在"六四"34周年当晚进行包场放映，但突然决定取消。据了解，该电影院的脸书账号曾出现可疑留言，包场电影的主办方不排除有人蓄意破坏。有评论认为，港府日前就港人悼念"六四"表态，已造成寒蝉效应。 六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选 涉事的高先电影院位于港岛坚尼地城，原定“六四”34周年当晚为纪录片《尚未完场》举行三场包场放映，每场约有70名观众。5月31日，院方突然决定取消六四当天所有私人放映。电影包场其中一个主办方、网购平台“如一”在脸书专业引述高先电影院说，院方收到“业界代表”的“强烈建议”，六四是敏感日子，应避免聚集活动，经过考虑后决定取消包场。据了解，《尚未完场》讲述香港一家电影院的创办人的事迹，内容与六四天安门事件完全无关。香港有媒体发现，高先电影院有关《尚未完场》的贴文连日来出现多个可疑账号留言，有人提到“终于有个地方可以悼念六四”、有人则声称“维园不能去，转到戏院悼念也可以”。“如一”负责人、香港前民主派区议员朱江玮强调，把包场安排在6月4日举行纯属巧合，认为事件荒谬。朱江玮：“我觉得是有‘牛鬼蛇神’趁机出动。目的是什么我难以揣测，却更令人记住了这一天，但这种‘记住’不是悼念而是破坏。我不知道他们是什么人，也不知道他们和政权的关系，但我感受到是一帮人。若这部电影和六四有关，我无话可说，但事实上这次活动与六四没有关联。这些人根本分不清青红皂白，反正他们收到指令就去执行。”近年每到六四前夕，香港前区议员朱江玮会向港人派发电子蜡烛。（记者高锋摄）主办方为民主派曾在六四派发电子蜡烛近年每到“六四”前夕，朱江玮会在自己开设的店铺向港人派发电子蜡烛。他去年举办私人电影放映会时，曾遭当局控告违反限聚令。朱江玮说，难以猜测高先电影院受到压力是否与自己的政治立场有关，但他经营的店铺近期一再受到当局关注。朱江玮：“‘如一’有受到类似的压力。近日政府不同部门先后上来调查。他们的理据是有市民投诉我们。仍然留下希望为香港多做些事情的人需要有心理准备，往后会越来越难。”对于港人以个人身份悼念六四是否不违法。香港特首李家超日前表示，任何公众活动及个人行为都要符合香港法律，执法部门会针对每个活动及行为依法处理，每个人都要为个人行为负责。如警方发现有行为不符合法律，会果断执法。香港时评人刘锐绍认为，港府的态度已形成寒蝉效应。刘锐绍：“官方忌讳“六四”，警告“六四”的活动不要过了红线，所形成的寒蝉效应是否已经一层层压下来，压到工商界，会否有一些建制派（亲北京阵营）的朋友处于不想太多事情这样一个心态，从而一直压到底层。这在中国政治文化里面是经常出现的。”香港电影工作者总会发言人田启文认为,高先电影院有需要公开交代“业界代表”是谁的决定以及取消包场的原因，避免外界揣测。 记者：高锋   责编：许书婷、嘉远   网编：洪伟```0
   ## 6/2/2023 - [六四34周年特别报道：拾起火把，前行!](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/kw-06012023130017.html)
@@ -23,9 +29,3 @@
  ```因涉嫌寻衅滋事被批捕的中国维权律师余文生与妻子许艳目前仍被囚禁。知情人士透露，近日许艳被加控性质远比寻衅滋事严重的煽动颠覆国家政权罪，分析认为，中国当局希望通过许艳案向西方发出警告。 余文生夫妇被控寻衅滋事　官方威胁律师勿协助维权律师余文生夫妇失踪近月　家属被迫放弃自请律师 许艳的代表律师5月30日到北京石景山看守所要求会见当事人。身在美国的维权律师王清鹏引述消息人士的话说，当时国保拒绝了许艳律师的会面要求。王清鹏：“许艳的律师5月30日去会见，石景山看守所以公安在提讯为由拒绝。随后赶过来的北京市公安局国保告诉律师不能会见，因为许艳的案子增加了一个新的罪名：煽动颠覆国家政权罪，这个罪名需要侦察机关的批准才能会见。但是没有向辩护律师出具任何文书。”许艳的丈夫余文生曾因“煽动颠覆国家政权”罪被判囚四年，去年获释。在余文生被羁押期间，许艳透过各种渠道为丈夫发声，包括与西方国家的外交官员会面，并经常接受外媒采访。王清鹏：“这个和她多年给余文生律师呼吁奔走营救有关系。还有一点，就是余文生律师服刑出来后，许艳和余文生律师在接受国际人权机构，特别是接受各民主国家驻华领事馆的邀请座谈时，曾揭露当局对他们夫妇的迫害。加上他们夫妇和当局国保不接触，不见面，当局对他们夫妇不好监控，所以进行抓捕迫害。”维权律师王清鹏（图）相信，许艳被控煽颠与她为营救余文生与西方外交官员会晤有关。（王清鹏独家提供，拍摄日期不详）滕彪：煽颠性质严重许艳命运难料据了解，许艳是第一个被抓捕并且被追究刑事责任的709案受害律师家属。王清鹏说，中国当局对外发放的讯息十分明确。王清鹏：“这次余文生律师夫妇被抓走，也表示当局向709律师的家属发出一个信号：你不服就要抓，抓你就要批捕，批捕就要判刑。余文生律师夫妇被抓捕，也是中共当局在向西方社会叫板：你们敢关心中国的人权，我们就抓捕你们关心的人，看看你们西方国家敢怎么办！”身在美国的维权律师滕彪表示，煽动颠覆国家政权罪性质远比寻衅滋事严重，许艳命运难料。滕彪：“这个罪名很显然是一个非常严重的政治性的罪名。当局会有很大的空间，轻的话可以判一两年，最长可以判到15年，所有在社交媒体上公开的言论以及私下的言论都可能被当作证据。”维权律师滕彪（图）估计，许艳在社媒发表的言论将成为她涉嫌煽颠的罪证。（滕彪独家提供，拍摄日期不详）余文生与妻子许艳今年四月中旬在北京被便衣公安强行传唤后与外界失去联系。消息人士透露，余文生也被羁押在北京石景山看守所。当局以不通过年检等手法，威胁律师和律师事务所不能代理案件。 记者：高锋   责编：许书婷、嘉远   网编：洪伟```0
   ## 6/1/2023 - [六四前夕许志永狱中呼吁　以禁食悼念"六四"](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06012023060926.html)
  ```六四34周年前夕，被重判十四年的中国著名人权捍卫者许志永在狱中发出六四当天以禁食悼念的呼吁。为许志永转达消息的好友滕彪表示，六四事件对中国影响持续而深远，许志永深受八九民运鼓励，在狱中坚持纪念六四，提醒大家不要让历史重演。 三十四年不改的心志　纽约六四纪念馆筹建纪实【我是怎么知道六四的】来信节选 因“颠覆国家政权罪”被重判的中国知名法律学者许志永，在六四34周年前夕，透过身在美国的人权律师滕彪，发出6月4日禁食一天纪念的公开呼吁。许志永表示，过去十年的6月4日，不论是监狱内或监狱外，他都会禁食一天，形容这是不可遏制的纪念，因为其他行动都有可能被强力阻止，只有禁食，身陷囹圄依然能坚持，认为禁食是其他纪念活动的精神基石，是更有力量的纪念方式。许志永："六四禁食，使历史和未来在我们个人身体和精神之中，得以连接。我们以小小的牺牲，纪念先辈的牺牲，以虔诚和谦卑筑起华夏民族精神。我笑着面对黑暗，因着光明的信念，坚信黎明将至。也许未来一段时间，我将不能发出声音，当我消失在黑暗当中，请继续努力做公民，争取选举权、言论自由那些普世的自由权利。" 他表示，多年来，一些朋友也会在当天默默禁食，但认为，禁食不只是个人的事，呼吁更多人参与，可以用转发文章、拉条幅、制作公民徽章和标识，一起把理念传开。中国维权人士许志永（路透社图片）滕彪：六四事件对中国影响持续而深远许志永在狱中坚持纪念滕彪公开许志永的呼吁后接受本台访问，他表示，六四事件发生的时候，他和许志永虽然只是高中生，但八九民运的精神，一直鼓舞他们坚持为公平正义发声，对许志永来说，纪念六四是非常重要的事情，即使在狱中也不能放弃。滕彪：“六四这件事情难对于中国政治来说，是极其重要，影响非常深刻的一个事情。虽然已经过去了34年，但仍然对中国产生深刻的影响，而且永远不会过时。许志永一直是坚持和平非暴力的原则，从甘地身上得到了很多启示。禁食是一种非常强大的行动，在许志永看来，我们应该永远记住这一天，否则的话，历史的悲剧很可能就会重演。"滕彪表示，许志永深受六四精神鼓励，坚持纪念为免历史重演。（受访者提供）滕彪：许志永等的理想和精神代表中国未来呼吁国际持续关注中国良心犯滕彪表示，据了解，许志永的精神状况还好，但不清楚他的身体状况。他表示，中国的看守所环境差，担心他在公开呼吁六四禁食后，待遇会否变得更差。滕彪："许志永是我最好的朋友，他已经多次入狱，当然特别担心他的身体健康的情况下，像许志永这样的人，他的理想、他的精神代表中国的未来，参与维权运动、发起新公民运动，都是在推动中国的法治进步，而且用的手段全是和平的方式，无论是以什么样的罪名判刑，这完全都是颠倒黑白。从刑期上看，不会因此在二审加重刑，但中国狱监的管理是非常的非人性，会有很多方法对犯人进行威胁和虐待。"滕彪表示，六四当天，除了会应响许志永的禁食呼吁外，也会参加多场活动，争取国际社会持续关注许志永等中国的良心犯。罗胜春相信在囚的丁家喜将与许志永同行在狱中禁食纪念六四与许志永一同被重判的维权律师丁家喜，在过去十年也会在六四当天禁食悼念。丁家喜的太太罗胜春表示，多年来与丁家喜一起在六四禁食，相信今年也不例外。罗胜春："那时候是在中国，没有办法进行公开的纪念，我跟丁家喜也是每年6月4日这一天都禁食二十四个小时，可以明志。他肯定会继续的，在烟台指定居所监视居住的时候他就坚持了，那些警察还不明白为什么六四这一天他不吃东西。大家都会约定在这一天，大家的心都是相通的，而且这是我们唯一能做的对六四的纪念。"罗胜春感谢许志永的公开呼吁，相信能给予还在坚持的人不少鼓励，也显示当权者无法阻止怀着信念的人，坚持做相信的事。 记者：陈子非   责编：许书婷、陈美华、嘉远   网编：洪伟```0
-  ## 6/1/2023 - [日企港资关闭中国工厂   国企撤招大学生计划](https://www.rfa.org/mandarin/yataibaodao/jingmao/gt-06012023002958.html)
- ```世界电池巨头日本松下蓄电池在中国沈阳的工厂已于本周三（31日）关闭，结束在中国长达29年的投资。与此同时，广汽三菱汽车原定于五月后恢复在华生产的时间再次延期。一家在东莞的港资企业宣布将在六月底关闭。另外，广东一国企撤销今年招聘两千名大学毕业生计划。 “谈论中国复苏为时过早”西方公司对中国经济表失望微软旗下领英求职平台退出中国市场 世界500强企业日本松下株式会社旗下在中国的松下蓄电池（沈阳）工厂发公告，宣布于5月31日前全面停止生产，进入解散清算程序，并不再开展任何经营活动。表明该公司结束了在中国29年的商务活动，正式退出了对中国的投资。公开资料显示，1994年在沈阳成立的松下蓄电池工厂以研发锂电池为主，其产品曾销往世界五十多个国家，松下电池的全球市占率一度高达百分之三十以上。据了解，松下蓄电池公司正在就中国合作方东北蓄电池股份有限公司共同投资兴建的厂房、机器设备，进行结算。资深财经评论人士蔡慎坤对本台表示，随着国际产业链快速移出中国，无论是外资企业，还是私营企业，他们的经营环境越来越糟糕。他说：“对商业对经营者来说，压力会越来越大。现在很多的企业面临倒闭、破产。就像深圳的华强北曾经是寸土寸金，现在我估计商户已难以为继。经济持续恶化，还会有大量的商场闲置、倒闭。现在广州在市场化方面已经做出很坏的榜样。”蔡慎坤说，许多人认为国务院新领导班子形成之后，经济形势将逐渐恢复，但是近期当局一直在强调“斗争”和“安全”，加上出口下降，国内消费萎缩。在此情况下，外资加快撤离，内企关停并转的现象愈演愈烈。他说：“现在经济面临的问题肯定是要从政治到经济全面检讨的过程。如果继续这么折腾，还会有大量的外资流出。”三菱汽车长沙广州停产 东莞港资厂关闭据日本《读卖新闻》周二（30日）报道，日本三菱汽车原定于今年五月后恢复在华生产的时间，如今再次延期，且复工时间待定。三菱汽车发言人表示，该公司正在与当地合作伙伴讨论何时恢复在中国生产，但对恢复生产的时间无可奉告。三菱汽车稍早前曾经表示，由于广汽三菱汽车今年一至三月的销量年减高达58％，从今年3月8日到5月的三个月内，其在湖南省的长沙工厂停产新车。不仅仅是日资企业，港资企业也在撤离。5月26日，港资明海整染厂发给员工的通知，称因为全球经济低迷、国内纺织整染行业经营极度困难，工厂也难以为继。经工厂管理层研究决定，将全面停止营业，全体员工于6月30日解除劳动合同。明海整染厂在报告中承诺，将如数结清与员工的工资薪酬，并依照相关规定向全体员工结算并支付法定经济赔偿金。港资东莞明海整染厂近期向员工发通知，因经营极度困难，定于6月30日关闭。（网络截图/古亭提供）广东一国企撤招两千名大学生计划广东一大型国企的部门负责人方女士告诉本台，东莞一大型国企原计划今年招聘大学应届毕业生两千人，由于国家停止财政补贴，这项计划已经取消。她说：“国营企业也不好过，国营企业要帮国家解决困难大学毕业生的就业问题。本来打算收两千名今年毕业的大学生，已经选定了人，但是现在突然停止这个计划，国家现在没钱（拨款）。”公开资料显示，东莞明海整染厂有限公司隶属香港卓明发展有限公司，位于广东省东莞市道滘镇南丫工业区。公司成立于1995年12月，自投产以来发展迅速，现已成为集织、染、成衣为一体的企业，现投资额已达3亿多港币，年产销量2.5万余吨。 记者：古亭   责编：许书婷、陈美华、嘉远  网编：洪伟```0
-  ## 5/31/2023 - [三十四年不改的心志　纽约六四纪念馆筹建纪实](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy-05312023133148.html)
- ```由1989年天安门民主运动领袖群体主持筹建的纽约"六四纪念馆"即将在今年6月4日天安门民主运动三十四周年纪念日前在纽约曼哈顿开幕。这个纪念馆是如何缘起、其筹建过程又是怎样的呢？以下是本台记者王允的追踪报道。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 于大海说自己喜欢做小事情，“纪念馆的很多事情能做的我都做了，包括拉电线、安装投影仪等等，包括去年在华盛顿做六四特展的很多展板等等，很多事情都是我自己做的”。他把自己这种习惯追溯到小时候，在文革期间“学工学农”期间养成的习惯。能见度不高的馆长于大海是去年底就任筹备中的“六四纪念馆”馆长的。纪念馆核心筹备组中有1989年天安门民主运动领袖王丹、周锋锁，当年的工人运动领袖吕京花等多人。和这几个人不同，于大海并没有亲身经历1989年学运。早在1980年代初期，于大海从北京大学物理系毕业后，就通过李政道奖学金留学美国。六四事件发生的时候，于大海已经在美国东岸的著名私立大学达特茅斯学院（DartmouthCollege）任教。但于大海并没有自外于中国的民主运动。中共的军队在1989年6月4日凌晨用枪炮镇压天安门民主运动的事情传遍世界后，于大海有一段时间几乎全职投入到海外支持中国民主的运动中。在1990年代，于大海曾在普林斯顿大学“当代中国研究中心”从事研究，并主持《中国之声》、《北京之春》等海外政论杂志。于大海的主业是金融投资，他不太常在媒体前述及自己的民运经历。但即使后来海外民运经历低潮，于大海也始终没有离开过民主运动的阵营。用他自己的话说就是，“对民运的活动，三十多年来从来没有间断过。”这次参与“六四纪念馆”的筹建，于大海作为馆长的职责是负责行政工作，布展、财务和法律等事务他都要把关。他和吕京花在曼哈顿上上下下地跑，最终把馆址选在靠近交通要道宾夕法尼亚车站（PennStation）附近。美国纽约六四纪念馆部分陈列（六四纪念馆馆长于大海提供）提前推进的计划王丹在去年一月对外宣布筹建纽约“六四纪念馆”，全名是“六四大屠杀纪念馆”(June4thMassacreMemorialMuseum)，为此还注册成立了非政府组织“六四大屠杀纪念馆委员会”。11年前，香港市民支援爱国民主运动联合会（支联会）曾在香港尖沙咀开办了以六四为主题的纪念馆，但屡遭香港政府的打压，两次被迫迁址，最后于2021年关闭。王丹说，香港六四纪念馆的关闭正是纽约六四纪念馆的缘起，“那我想，这么大一个历史事件，不应该没有一个纪念馆，然后就开始跟一些朋友讨论，大家都很赞成，这样就慢慢做起来了。大家想法都一致，就成立了筹委会。”筹委会有个五年计划，原计划用两、三年时间众筹第一阶段资金五十万美元，先把纪念馆开办起来。但超乎众人想象的是，委员会仅用不到八个月时间就筹集到了五十万美元，“一开始就是筹委会这五十多个人，筹委会的人筹了七万多美元，在这个基础上向社会大众呼吁，然后四面八方的捐款就汇进来了，”王丹介绍说。让王丹印象最深刻的一笔捐款是国内一位单亲母亲一百元人民币的捐款，“这一百元人民币在我看来，它的重量跟一万美元是差不多的，她自己生活贫困，又是在国内，听说要建纪念馆，她无论如何要尽一份力量，所以她就托别的朋友辗转捐了100元人民币，从中国国内。”据于大海介绍，在所有捐款中，最大的一笔也是来自一位国内朋友的十万美元，“实际上也是参加过天安门民主运动的一个学生，后来是在国内发展实业，赚的钱比较多，但他的八九情结显然还是非常强。当他听说这个（筹建纪念馆）消息，他就主动和王丹、和我们联系。”第一笔资金五十万美元提前了十七个月到位，这大大推进了纪念馆筹建的速度。但这也大大压缩了几位核心筹备组成员的时间，王丹介绍说，从去年初开始，核心筹备组每两周开一次筹备会，还有每两周一次和工作团队的例会。王丹个人用于公共事务的时间有三分之二投入到纪念馆的筹备。作为馆长的于大海则有几乎一半的时间用于筹备的工作。这五十万美金目前主要用于支付场地的租金、水电等开销，筹建团队所有人都以志愿者身份投入，不支取人工费用。但于大海介绍，他们仍计划聘用专门人才来管理纪念馆。美国纽约六四纪念馆部分陈列（六四纪念馆馆长于大海提供）三十四年后的重逢周锋锁在筹备小组中主要负责展品的收集和整理。他现在的住所位于新泽西州，比邻纽约市的边界，几年前他定居此处后，就开始在自家地下室展出六四文物，并常常向来访的各界朋友介绍这些文物的背景。这次参与“六四纪念馆”筹建，周锋锁说既是他的个人行为，也是代表他担任执行主任的非政府组织“中国人权”。在1989年6月4日凌晨5点，周锋锁是最后一个从天安门广场人民英雄纪念碑上撤出来的清华学生。和他同时撤出的还有一台用于运动宣传的高速油印机，“我就看到清华的同学在抬这个东西，我就很担心，我就说，这个时候了，为什么要抬这么重的东西？同学就说，我们要抬回去，继续战斗。”周锋锁在六四后的确是在“继续战斗”，从未离开过中国民主运动的第一线。让他没想到的是，时隔34年后，他居然再次看到了这台油印机，“就像老朋友重逢一样，对于我来讲，当时是个硝烟战火的时代，在那一瞬间我们失散了，然后它又突然回来了。”油印机重现的背后有很多人的心血和接力，周锋锁说，“这也是这个纪念馆为什么这么珍贵的地方，每一件文物都是很多人多年不改的心志的代表。”周锋锁介绍说，这次在纽约六四纪念馆展出的展品总共有一百多件，其中有三十多件是来自1989年的天安门民主运动实物。王丹则强调，目前的展品时间跨度三十多年，从1989年上半年一直延续到2019年香港反送中运动，因为筹委会认为，香港维园晚会实际也是八九民运的一个延续。美国纽约六四纪念馆部分陈列（六四纪念馆馆长于大海提供）"新时代"的本质在去年底过世、1989年天安门民主运动期间被迫下台的中共前总书记赵紫阳秘书鲍彤，为纪念馆题写的馆名“六四纪念馆”也是本次展品之一。这幅题字实际是鲍彤去世前最后一幅书法作品。于大海介绍说，“鲍彤先生的字是写得很好的，但你看他的这幅题字你就知道，几乎可以看到他的手有一点颤动，就是说他的身体已经差到那种情况。”去年六四前夕，鲍彤在自由亚洲电台最后一次发表文章，回顾六四细节，在文章的最后，他总结说，“‘六四’屠城确实是史无前例的一场大革命。它明目张胆开辟了公权绝对不受制约和民权彻底失去保障的新时代。”而如今，这个“新时代”似乎还在延续。王丹向记者解释说，在当下建立“六四纪念馆”对世界都有重要意义，因为中国被认为在习近平统治下形成对西方、甚至人类文明的一种挑战，“在这种关键时刻，西方更应该认清中共的本质，如果你要认清中共的本质，没有什么比六四这件事更能突出地彰显中共的本质，他本质上就是压制民主，甚至不惜以暴力手段压制民主的这样一种政权。”为了年轻一代参与到六四纪念馆筹建过程中的不仅有鲍彤这样的老人，和王丹等六四一代，也有很多年轻人。在布展，收集和整理文物，以及举办活动等过程中，有十多个青年人参与。他们中有在纽约地区留学的中国学生，也有在当地工作的中国青年人。馆长于大海说，这个纪念馆在很大程度上也是为年轻人而设的，“我们纪念馆已经办了好几次纽约地区的民主沙龙活动，每次都有几十人来，他们大都是年轻人。”今年三十二岁的董先生去年十月才从中国到达纽约。出于安全原因，他不愿意透露全名。2019年“六四”三十周年之际，他孤身前往天安门广场，在天安门城楼下亮出纪念六四的体恤衫，并采访在场的外国人，因此遭到当地警方抓捕，以“寻衅滋事罪”被判入狱七个月。到达纽约后，恰逢“六四纪念馆”的筹备初启。董先生加入到志愿者的队伍中，“主要是帮周老师（周锋锁）他们布置一下会场，登记一下来宾、维持一下秩序等等，都是一些很微小的工作。但我觉得还是很有意义的，原先在国内都没有这样的机会。”参与筹建活动，董先生终于不再感觉孤单，“国内的主流环境就是我们每天都能看到的小粉红之类的，但是来了纽约之后，认识了这样一群跟我能够志同道合的朋友，你会发现，原来你不是一个人，你所做的原来并不是在大多数人看来是一件傻事。”去年底中国国内发生反抗不合理疫情封控的白纸运动，董先生也参与了纽约地区声援白纸运动的示威活动，这让他很受鼓舞，“其实大家都可以看到，现在的年轻人，包括海外的年轻人，并没有把六四的精神丢掉，其实六四的精神还是在我们每个人的心里。”他强调，这种精神只是需要一把火去点燃它，或者是让更多志同道合的人去坚守它，让更多的人去发现他们对民主的期待和渴望。 记者：王允   责编：梒青   网编：洪伟```0
-  ## 5/31/2023 - [记者报道遭痛殴　贵州教师溺水案恐不单纯](https://www.rfa.org/mandarin/yataibaodao/meiti/tj-05312023124643.html)
- ```近期，中国极目新闻的一名记者在贵州报道一起教师溺水案时竟被三名男子跟监与围殴。事情传出后，中国网民质疑溺水案的案情不单纯，并要求中国当局彻查。 中国记者采访疑被打伤引关注本人翻脸说是"摔伤"英国就BBC记者被打召见中国大使 据台湾的中央社报道，今年四月中，贵州毕节织金县有六名教师在河滩捡鹅卵石，然而由于河川上游的引子渡水电站突然放水，导致两名教师被大水冲走，被发现时两人均已溺毙。据传，这两名教师分别是马场小学老师李地军，以及马场镇布底幼稚园老师徐倩。学校校长：老师们捡石子大概是约着玩两名溺亡的教师家属声称，这6名教师会前往河滩捡鹅卵石是因为相关政府单位在进行校务稽查时，称学校装饰的在地化元素不够，建议教师捡鹅卵石来装饰学校环境。不过，布底小学校长张习军否认捡鹅卵石的目的是在应对上级检查。当记者追问张习军那6名老师为什么要一起捡石子时？张习军表示：“那个我不清楚，应该是他们一起约着玩吧！”与此同时，织金县马场镇政府以及中共织金县委宣传部也撇清责任，表示网上谣传“教师为迎接领导检查，在河畔捡鹅卵石装饰校园”并非事实，以及教师会溺亡“全部系那几名教师的个人行为，是他们私自下河玩耍造成的。”记者调查溺水案竟被不明人士痛殴教师溺亡的事件在获得媒体关注后，织金县政府新闻办公室才在5月28日通报这起事件，不过通报中却未说明6名教师捡石头的原因。为此，极目新闻记者李贤城在5月29日被领导指派，前往贵州调查教师溺亡事件。然而，李贤城先是在采访死者家属时，遭一名身份不明的男子盘问，而后又遭到3名陌生男子跟踪、围殴、并摔毁手机。事件过后，李贤城表示，他现在身体已无大碍，他希望当地能够严惩肇事者，揪出幕后指使。对此，当地政府表示公安部门目前尚未釐清陌生男子的身份，但是“肯定与政府部门没有任何关系”。对于当地政府不断粉饰太平、撇清责任，记者在报道案件时又被痛殴的情况，引发外界对于黑金政治的热议及不满，中国网民纷纷表示：“扫黑除恶依旧任重道远啊，尤其是官黑勾结！”、“也许，老师捡石被淹案的背后，有着更可怕的事实，有着更恶霸的势力在横行着”、“这肯定不是个人所为，打人者一定是受到官方或者组织的指派去无所顾忌地行凶！毕节应该出来说清楚，揪出幕后指使者！” 记者：唐缘媛 责编：梒青  网编：洪伟```0
