--- a/新闻/自由亚洲电台事实核查.md
+++ b/新闻/自由亚洲电台事实核查.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [事实查核 | 中国官媒民调：全球七成民众反对北约染指亚太 ？](https://www.rfa.org/mandarin/shishi-hecha/hc-06022023183139.html)
+ ```标签：欠缺证据、误导一分钟完读：“全球多数受访者反对北约插手亚太”。中国国有媒体中央广播电视总台的外语频道中国环球电视网（CGTN）5月29日引述自己的民调报道称：日本首相岸田文雄24日证实北大西洋公约组织（NATO）计划明年在东京设联络处后，有高达七成的受访者表达“强烈反对”的立场。但亚洲事实查核实验室发现，这则报道只交代了调查在“CGTN多个语种官网平台上进行”，但完全没有提供民调的基础资料。除官网外，CGTN也曾在自己的官方推特账号上发起“是否同意北约在日本设联络处”民调，结果是赞成者远多于反对者。然而，CGTN删除了推特民调页面，在后来的报道中也没有交代删除的原因。综上，CGTN民调给出的“七成民众反对北约染指亚太”结论不可信，涉嫌误导民众。CGTN发布的关于70%民众反对北约染指亚太的报道截图图截取自CGTN官网深度分析：北约将在日本设立联络处的消息引起国际关注，CGTN于5月29日以英文、西班牙文及中文发表了相关报道。在英文报道中，CGTN提到，日前曾在“多语种网络平台”发起一次网络民调，结果高达71.1%受访者“强烈反对”北约的做法。报道指出，在不同的语种中，以西班牙语、法语、阿拉伯语和俄语的平台上，都有超过8成的受访者反对这一可能举措。如果以国家为单位统计，俄语受访者反对的比例最高，达到92%。在英语平台网站上反对比例最低，为54%。CGTN用西语发布的民调结果图截取自CGTN西语推特帐号"全球"民调报道欠缺调查方法民调机构“皮尤研究中心”（PewResearchCenter）的高级调查顾问基特（ScottKeeter）曾撰文解释民调如何运作，其中列出民调应该提供给受众的重要资讯应包括“访问了谁”、“访问多少人”、“执行方式”、“结果有无加权”和“问卷题目”等。基特认为，现在很多民调甚至不采随机抽样，而是通过各种技术让人民在网络上自愿、或选择参与调查，这些民调怎能准确代表人们？虽然有些执行单位会通过加权调整，但这种调查的代表性较差，也容易受到虚假受访者的影响——也就是没有资格参加调查或提供不真诚的答复。台湾民调专家戴立安6月1告诉亚洲事实查核实验室，CGTN并没有提供受访者的性别、年龄、教育程度、国别等详细资料。同时，在网络平台上执行调查本身就欠严谨，因为推特等社媒上有许多假账号，即使有几十万人提交问卷，不一定有样本代表性和真实性。CGTN在推特上做了什么？在这次民调过程中，CGTN在推特平台上的一次“删文”操作也引发了质疑。5月26日，CGTN在推特上发起投票，询问网民“是否支持北约到日本设立联络处”。美国联邦参议员克鲁兹（TedCruz）的前法案助理苏柏力克（MichaelSobolik）发现，CGTN又很快将推文删除了。苏柏力克的截图显示，至少到26日凌晨3时，投票推文仍是存在的，截至当时，有86.5%的参与者支持北约到日本设立联络处。亚洲事实查核实验室无法独立证实与查核CGTN删除推特投票的确切时间点。然而，上述推特上的即时投票情况，并不在CGTN后来发出的英文报道内容中，报道也没有提到CGTN自己在推特上删除了这一投票。戴立安认为，如果真的有删文情况，很可能是预期结果不如执行单位所想。若是一般专业单位，发生这种情况“必须要交代”，但CGTN此次调查恐怕并不是要反映民意，而是为倡议自己国家的立场。就”删除推特平台民调结果”一事，亚洲事实查核实验室致信CGTN询问原因，并希望了解究竟有多少人，在哪些平台参与了投票。至截稿时，CGTN都没有回复。CGTN刪除了推特平台的调查结果，但沒有交代原因。苏柏力克推文截图"民调"的诱导性问题亚洲事实查核实验室同时发现，CGTN设计的提问存在预设的前提，例如：提问一：日本作为一个有侵略别国历史的国家，近年来却寻求扩大自身军事实力。你担心吗？提问五：北约在美国的支持下，不断扩大军事势力范围，插手地区事务。你认为北约是否已成为美国维护霸权和追求政治利益的工具？戴立安对此批评，问卷虽然题目不多，“但每一题都充满诱导性”，问卷目的是为凸显执行单位的立场。他说：“CGTN的调查是‘pushpoll’（导向性民意调查），把立场塞给民众，所以是宣传，不是民调。”结论：一般来说，规范的民调结果报告都会交代其样本量、有效样本数、置信率、民调进行时间及抽样正负误差值等。而CGTN的民调结果发布只引述了自己官网上的调查结果，上述基础信息都没有给出说明。问题设计也具有导向性，还没有给出任何解释地删除了推特平台上的投票结果。基于以上情况，亚洲事实查核实验室认为，CGTN的这一民调本身欠缺科学性和可信度，CGTN基于这次民调发布的“全球逾7成受访者强烈反对北约染指亚太”的报道也是在误导舆论。亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
   ## 5/31/2023 - [事实查核｜男警"跪颈压制"女子，"我不能呼吸"重现台湾？](https://www.rfa.org/mandarin/shishi-hecha/hc-05312023180757.html)
  ```标签：错误一分钟完读：推特、微博、网易等平台上近日疯传一张台湾男警以跪姿压制女子的照片，包括中国驻大阪总领事薛剑、中通社旗下"通传媒"都转传相关照片，部分配文写着"我不能呼吸"意指台警模仿美国警察跪颈，行为狠毒、残忍，甚至有自媒体帐号称女子因无法呼吸已经死亡。亚洲事实查核实验室经采访后得知，影像中的女子涉嫌吸毒，在警方逮捕过程中口出恶言，意图动手袭警，被男警摔倒后压制背部以便将她戴上手铐；之后她自行起身，由男警带上警车。新闻报道引用的现场录影，情节也和警察说法相同。该案件既无关"种族灭绝"，该女子也没有死亡。深度解析：包括中国官媒香港中通社旗下“通传媒”（下左图）等多个帐号5月30日在推特发布以下照片，配文都提到“我不能呼吸”，引人联想到引发美国“黑人的命也是命（BlackLivesMatter）”社会运动的弗洛伊德事件。2020年5月，美国明尼苏达州一名白人员警以膝盖压制非裔男子乔治·弗洛伊德（GeorgeFloyd）颈部长达5分钟，弗洛伊德多次挣扎表示不能呼吸，但最终断气，引爆社会愤怒，种族歧视争议再起。中国驻日本大阪总领事薛剑也发了这则讯息（下右图），他发布的合成图右半部，更直接使用美国“弗洛伊德”案的照片。中通社旗下"通传媒"在推特发布照片，配文写上"我不能呼吸"（图取自通传媒推特账号）中国驻大阪总领事薛剑在推特发布台湾男警以跪姿压制女子的照片，其合成图右半部还使用美国"佛洛伊德"案的照片。（图取自薛剑推特帐号）亚洲事实查核实验室也注意到，自称为自媒体的推特用户“CBB新闻”5月29日晚间发布类似照片，内容除了称照片中的女子无法呼吸死亡，更指这名女子是排湾族原住民，她的父母去年才被警察打死，如今一家三口全灭等讯息，还呼吁台湾应停止对原住民“种族灭绝”。“CBBNews”帐号于2023年1月加入推特，经常发布未标注来源的照片或影片，指控台湾警察殴打原住民，且会标注“#台湾”、“#种族灭绝”等。该事件在中文社媒广泛传播图取自推特、微博、网易。亚洲事实查核实验室发现，这起事件5月26日发生在台湾基隆市，根据中央社、联合报、自由时报、TVBS、三立电视等多家台湾媒体报道，这名女子姓蔡，她被控与其他3人涉嫌在旅馆内吸毒。基隆警方到场查获毒品，将4人带回调查时，蔡姓女子拒上警车而被员警压制，期间对员警口出恶言，甚至欲袭警。警方侦询后，依违反毒品危害防制条例、社会秩序维护法及妨碍公务罪嫌，全案移请基隆地方检察署侦办，涉案人已交保。报道本案的台湾媒体大多引用了网路上所流传警方制伏女子的影片。亚洲事实查核实验室检视了联合新闻网的影片，发现当时女子先是拒上警车，遭男警压制在地，女警要帮女子上手铐时，女子挣扎并踢了员警一脚，女子上铐后随即起身，对员警比中指、抵抗上车，之后男警才将她带进警车；从男警将女子压制在地到她起身，过程约35秒。尽管台湾媒体将这起案件当作一般社会新闻报道，但推特、微博、网易等平台29日至31日出现大量用户转发相关照片与短视频，例如“孤烟暮蝉”微博视频号在29日下午3点54分发布了视频，未引述台媒报道说明事件经过，配文仅写“台湾省男警察模仿美国跪压颈式对一女性执法”，通传媒于30日下午2点08分发布，薛剑则是同天下午3点04分发文。亚洲事实查核实验室5月31日电访基隆市警察局第二分局信六路派出所所长朱德望，他表示，该女子并非原住民，逮捕行为符合规范，没有导致嫌犯受伤或无法呼吸；至于警方以柔道技法“大外割”摔倒并压制她，朱德望说明，这是员警制伏犯嫌的方式——先将对方摔倒在地，压制背部，让他无法起身，“我们不会压在脖子让他无法呼吸，我们会压在他的身体上，让他无法起来为原则。”结论：经核查原视频并访问负责此案的台湾警方，我们得知社媒上所谓“台警跪颈压制”、“女子无法呼吸死亡”等说法都是不实资讯；然而，在多家台湾媒体已报道、发布影片后，中国外交官、官媒仍不查证，以一张截图配文“我不能呼吸”，甚至使用弗洛伊德案的照片，以错误资讯指控台湾警察学美警跪颈虐待嫌犯。亚洲事实查核实验室同时观察到，本案有大量帐号在短时间集中发布同一则错误资讯的协同行为。亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
   ## 5/29/2023 - [事实查核｜因为"俄国人将会死去"，美参议员大赞"钱花得成功"？](https://www.rfa.org/mandarin/shishi-hecha/hc-05292023133428.html)
@@ -27,5 +29,3 @@
  ```标签：误导 一分钟完读： 苏丹4月15日发生夺权内战，伤亡惨重，各国陆续撤侨。中国外交部发言人华春莹29日在推特发文比较美中撤侨的不同，指中国派军舰顺利撤侨，美国政府迅速撤离使馆人员，却没有撤离美国公民的计划。中国媒体、社媒平台也有许多关于美中在苏丹撤侨的文章，将舆论导向“中国顺利撤侨，美国弃国民不顾”。亚洲事实查核实验室发现，美国撤侨速度也许较某些国家慢，但并非“弃国民不顾”。在苏丹爆发冲突后不久，美国已派军舰至苏丹外海待命，也采取措施联络在苏丹的公民以协助他们离开；美国国务院于29日宣布，由美国组织的车队已将逃离苏丹战火的美国国民和其他国家公民撤离到沿海城市苏丹港。 深度解析： 苏丹自2021年10月发生军事政变，局势动荡。今年4月15日，政府军和武装团体“快速支援部队”（RSF）爆发冲突，期间虽曾达成停火协议，仍未能阻止双方交战，造成数百人死亡、数千人受伤。苏丹局势持续恶化之下，美国、德国、英国、日本、韩国、中国等多个国家陆续展开撤侨行动。 中国藉撤侨大宣传 中国国防部新闻发言人谭克非29日表示，中国海军南宁舰、微山湖舰于北京时间4月26日至29日，从苏丹港撤离940名中国公民、231名外籍人员至沙特吉达港。新华社、央视等官媒大幅报道中国成功撤侨，新闻画面、照片中，军舰上挂著“欢迎祖国同胞回到温暖港湾”的红色横幅，撤离人员挥舞著五星红旗，受访者说:“强大的祖国是我们坚强的后盾！” 中国派往苏丹撤侨的军舰挂上了“习主席派军舰接大家回家”的横幅。(“帝吧”推文截图)华春莹29日在推特发文“最先vs.最后”，将其描述为中美之间的“又一区别”——在国外遇到危险时，美国官员先撤离，但中国外交官总是帮助公民撤离，最后才离开。这则推文搭配了一张图卡，左边图片是中国撤侨画面，并写道“中国已派2艘军舰撤离940名公民”；右边图片则是美国主流媒体所报道的美国撤侨行动，配文写道“美国政府迅速用飞机撤离美使馆工作人员，却没有由政府协调撤离美国公民的计划”。 中国外交部发言人推特截图观察者网微博视频号、中通社旗下“通说”等媒体都转发了华春莹的推文，网易等平台也出现许多比较美中从苏丹撤侨差别的文章，像是“中国火速撤侨任务完成，美国却不顾美公民生死”、“中国宣布成功撤侨，美国却丢尽了脸，关闭大使馆不管上万公民死活”等。 美国撤离苏丹做法遭批 4月22日，美国总统拜登下令美军协助撤离在苏丹的政府人员，并暂停美国驻苏丹大使馆的运作。美国政府以飞机撤离约70名使馆人员，其他国家也陆续撤离当地的政府人员或该国公民。但美国国务院仍表示，由于首都喀土穆的安全局势不明且机场关闭，目前由美国政府协调撤离美国公民并不安全，但政府仍致力于协助留在苏丹的美国公民在安全条件允许的情况下离开。据美国有线电视新闻网（CNN）等媒体报道，美国官员估计在苏丹约有1万6千名美国公民，多数为双重国籍，而且他们“并不想离开”。美国政府的反应引起人们不满，CNN、《华盛顿邮报》等媒体记者采访了在苏丹的美国人，有人感到被政府抛弃，有人说自己像是二等公民，他们也抱怨国务院毫无用处。从苏丹爆发武装冲突以来，国务卿布林肯（AntonyBlinken）、白宫国安顾问苏利文（JakeSullivan）、国安会战略沟通协调官柯比（JohnKirby）等官员都有回应关于撤侨的问题。综合美方官员的说法，政府2021年起便通过“旅游建议”等渠道警示民众勿前往苏丹，在苏丹内战后，也与当地的美国公民联系，并积极协助他们离开苏丹。而大规模撤离居住海外的美国公民并非政府的标准程序。上述官员的立场，其实在美国国务院领事事务局网站都有说明。在苏丹政府军与RSF同意延长停火协议后，美国政府展开大规模撤侨。据纽约时报报道，苏丹当地时间4月28日，载有约300名美国公民的车队从喀土穆出发，前往苏丹港，而美国的无人机一直在监控车队撤离路线。美国国务院29日发布声明指出，一支由美国组织的车队已将逃离苏丹战火的美国国民和其他国家公民撤离到苏丹港；美国在区域和国际合作伙伴的支持之下进行密集谈判，为上千外国和美国公民撤离创造了安全条件，包括这次的行动。也就是说，在华春莹发推比较美中撤侨之前，美国政府已采取行动大规模撤侨。事实上，在政府组织撤侨前，也已通过其它方式联系、协助在苏丹的美国公民。 美国从苏丹大规模撤离公民。(图取自美国驻吉达总领事馆推特账户)苏丹内战以来，美国政府做了什么？ 4月15日苏丹内战，布林肯便通过声明对外说明苏丹局势，并表示一直在与可能在该地区的美国公民沟通安全措施。美国国务院16日发布安全警示，指目前苏丹局势不明且机场关闭，尚无美国政府协调撤离的计划，建议留在原地避难；有意撤离的美国公民可填表，若遇紧急状况可致电联系。17日，布林肯分别与苏丹交战双方的两位将领谈话，“强调达成停火的急迫性”。据路透社报道，美国外交使团的车队17日在苏丹遭遇炮火袭击，所幸无人伤亡。此后，布林肯多次与交战双方及相关国际伙伴交谈，敦促苏丹停火，并于21日、24日、27日分别宣布达停火协议或同意延长停火。22日，美国暂停驻苏丹大使馆的运作，以军机撤离美国政府人员及家属，国务院并更新了对苏丹的旅游建议。美国海军协会新闻网24日报道，海军已先行部署驱逐舰特拉克斯顿号（USSTruxtun）到苏丹港附近，另派遣排水量高达7万8千吨的基地船路易斯·B·普勒号（USSLewisB.Puller）至苏丹外海待命，以支援国务院作业。国务院副发言人巴特尔（VedantPatel）在28日记者会表示，只有不到5000人与国务院联系希望能够离开苏丹；截至5月2日，美国政府协调组织了三个车队，让700人得以离开，而自苏丹爆发冲突以来，美国政府与盟友及合作伙伴一起帮助1千多名美国公民离开苏丹。 结论： 美国政府对于从苏丹撤侨行动的反应与速度，确实在国内引起质疑与抱怨，但自苏丹内战以来，美国政府持续通过多种管道联系、协助当地公民离开，并非外界所指控的毫无计划、弃国民不顾。中国官员、媒体藉美国民众批评声浪进行宣传，甚至在美国已大规模撤侨后，仍发布未经更新、不完整的资讯误导受众。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
   ## 5/2/2023 - [事实查核｜《开罗宣言》和《波茨坦公告》把台湾归还给了中华人民共和国吗？](https://www.rfa.org/mandarin/shishi-hecha/hc-05022023130021.html)
  ```标签：错误 一分钟完读 中国外交部长秦刚四月下旬在一场演讲中表示，1943年发表《开罗宣言》和1945年的《波茨坦公告》是两份证明北京政府对台湾拥有主权的历史文件。但亚洲事实核查实验室认定中国的主张是错误的。因为考察这两份文件发现，它明确规定了二战结束时日本投降的条件，包括放弃对台湾的控制权，并将台湾归还给中华民国。而且它们发表时，中华人民共和国根本还未建立。亚洲事实核查实验室认为，这两份宣言不能作为解决中华民国和中华人民共和国间关于台湾主权归属政治争端的依据，但秦刚等中国官员经常发表的类似声明，忽视了中华民国对台湾行使主权的既成事实。 深入分析 从1949年中国内战结束至今，统治中国大陆的北京政府声称自己是代表中国的唯一合法政府，并拒绝承认中华民国对台湾的事实主权。中共外交部长王毅在2022年9月的一次讲话中简明扼要地说：“中华人民共和国政府是代表整个中国（包括台湾）的唯一合法政府。”王毅也说：“上述具有法律约束力的国际文书（《开罗宣言》和《波茨坦公告》）已充分将台湾无论是从事实上还是从法律上归还给中国。”中国外交部长秦刚2023年4月21日在上海的一场公开演讲上再一次做出政策宣示：“台湾回归中国是二战后国际秩序的组成部分，《开罗宣言》白纸黑字写着，《波茨坦公告》清清楚楚印着。”外交部发言人华春莹随后发推文重申了这一主张。王毅和秦刚的声明都认为，上述两份宣言最初的意图正是解决中华民国和中华人民共和国之间关于台湾主权的争端。 开罗会议档案照片，左起：蒋中正、罗斯福、丘吉尔、宋美龄。《开罗宣言》或《波茨坦公告》可以确认台湾归属“哪个中国”吗？ 答案是：“不行。”卜睿哲(RichardC.Bush)目前担任布鲁金斯东亚政策研究中心(CenterforEastAsiaPolicyStudies,TheBrookingsInstitution)高级研究员，他也曾是美国在台协会理事主席，著有多本美中台关系著作。他对亚洲事实核查实验室表示，两份宣言的目的，并不是解决“中华民国是否应放弃对台湾的主权，改由中华人民共和国统治台湾”这样的问题。“这两份宣言主要是二战后台湾主权问题的谈判开始之前，各国发表的意向性声明。中华人民共和国的推理是错误的。”卜睿哲指出，考虑到在这两份宣言发布时，中华人民共和国甚至还没有宣布成立，使用这样的宣言来解决中华人民共和国和中华民国关于台湾的争端是不合逻辑的。中华人民共和国官员经常声称《开罗宣言》将台湾及其周边岛屿“归还给中国”，而不是原始条约中的完整措辞“中华民国”。在中国大陆印刷、发行的《波茨坦公告》，常常将文章开头的“中华民国国民政府”缩写为“中国国民政府”。这些看似微小的改变使中华人民共和国更容易声称该条约赋予他们对台湾的司法管辖权和主权。这些术语与原始措辞非常接近，听起来具有说服力，但又有所不同，可以回避中华民国仍然存在的棘手事实。卜睿哲表示，清朝自17世纪末至1895年期间在台湾保持了司法管辖权和主权，而中华民国自二战结束时台湾的日本军队投降以来一直完全控制着台湾。卜睿哲说：“这两份宣言只是关于二战后关于台湾归属的‘意向声明’。当时，国际上公认的战后领土转让机制是通过和约实现的。不过在太平洋战后签订的《旧金山和约》中，日本只放弃了对台湾的所有权，而没有将其划归给任何国家。”台湾前总统马英九任内非常重视《开罗宣言》将台湾交还中华民国的历史事实，曾经举办纪念展览。(照片取自台湾总统府新闻资料库)不过台湾国民党的主张认为中华民国与日本在1952年签订的《中日和约》中已经规定在1941年12月9日以前“所缔结之一切条约、专约及协定，均因战争结果而归无效。”换言之，1895年清朝签订的《马关条约》也因此失效。 结论 亚洲事实核查实验室发现，中华人民共和国官方声称《开罗宣言》和《波茨坦公告》证明台湾的领土最终必须由中华人民共和国统治的说法是错误的。这些文件明确表示日本需要将台湾归还给中华民国，但两份宣言的宗旨并不在解决中华民国和中华人民共和国之间关于台湾归属的争议。中华人民共和国的官员声明立场时，经常只采用有利于其自己政治目标的历史解释，同时忽视与这些解释相矛盾的事实。本案就是一个例子。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
-  ## 4/28/2023 - [传播观察｜达赖喇嘛"舌头门"事件之后，有人在组织舆论吗？](https://www.rfa.org/mandarin/shishi-hecha/hc-04282023140936.html)
- ```“哪个年轻女人愿意接受老男人这样的‘亲切表达’呢？”“全世界对儿童表达亲切都有共同的界限，什么是善意，什么是性骚扰，世人的眼睛是雪亮的。”——4月16日，环球时报前总编辑胡锡进在个人微博上发布了一段模糊的影片，影射达赖喇嘛骚扰因病失去双手双脚的英国女孩蒂莉∙洛基（TillyLockey）。影片中，达赖喇嘛和蒂莉一起坐在公开活动现场，抚摸着她装着仿生机械手臂的上臂。这一段视频在胡锡进微博上至少已有超过350万人次观看。文章下面，有留言者批判达赖喇嘛是“恋童癖”、“老流氓”。这是前不久达赖喇嘛“舌头门”事件发生之后，中国社交媒体上流传众多关于达赖喇嘛的负面消息之一。2月，达赖喇嘛在印度出席一个公开活动，对一个求他拥抱的小男孩说“吸我舌头”。该影片经美国之音藏语主页发布一个多月后，引发争议，4月11日，达赖喇嘛办公室发布了道歉声明，众多媒体跟进报道，激烈争论仍在持续。在这之后，中国媒体和社交媒体又有其它影片开始大量传播，除了上述发生于2018年的达赖“抚摸”蒂莉的片段之外，还有2016年美国歌手LadyGaga被达赖“摸膝盖”的视频。这些影片，哪些内容是事实？哪些曾经被“加工”制作？背后是不是有“带节奏”的集中传播？"舌头门"事件引发争议达赖喇嘛的“舌头门”完整视频拍摄于印度达兰萨拉，一位小男孩在公开活动中向达赖喇嘛提出，想要一个拥抱。男孩走上前去，达赖喇嘛指着自己的脸，说“先是这里”。男孩给了他一个吻，然后微笑着拥抱了他。接着，达赖喇嘛指指自己的嘴唇，亲吻了男孩的嘴唇，现场可以听到观众的笑声和掌声，然后，达赖喇嘛说，“吸我的舌头”，同时伸出舌头，最后收回去，并用自己的额头和男孩的额头碰在一起。这段视频引发了激烈的批评和争论。信仰藏传佛教，或是拥护达赖喇嘛的一方认为，这是一个纯真无邪的场景，男孩受到了尊者的爱护和关怀，并引述传统西藏文化的证据，强调达赖喇嘛的举止行动并没有侵犯和冒犯的意味。而另一方认为，达赖喇嘛与男孩的接触过于亲密，让人反感，在很多文化中，都会被解读为侵犯儿童权益的行为，例如印度儿童权利组织“CentreforChildRights”组织表示，无法接受这样的“西藏文化表达”。当事双方——小男孩和达赖喇嘛本人也对此做出了回应，小男孩和妈妈接受采访时称，他们认为和达赖喇嘛的互动是非常美好的经历，达赖喇嘛办公室声明中则对可能造成的伤害表示道歉，并强调，达赖喇嘛经常会天真而俏皮的和身边人“开玩笑”。然而，此事余波未了，尤其在视达赖喇嘛为舆论禁区的中国，许多新闻媒体、意见领袖开始热议达赖喇嘛的诸多“罪状”，并有大量旧视频开始传播。达赖喇嘛对蒂莉伸出“咸猪手”？其中一个流传甚广，引发不少网友愤慨的，即是达赖喇嘛“骚扰”著名的截肢女孩。 亚洲事实查核实验室查证了相关资料，并向蒂莉的经纪人问询当时的情况。这场活动2018年9月15日在荷兰举行，旨在探讨科技如何帮助人类获得更美好的生活。那时，蒂莉只有13岁，她左脚穿有辅具，一双手则装上如同刚铁人般的仿生手臂。活动开始时，她缓步走上舞台，与包括达赖喇嘛在内的众人分享自己婴儿时期罹患脑膜炎，引发败血症并不得不截肢的经历。2021年，17岁的蒂莉还在自己的推特上回忆当时的情景，并贴出了两人当时在活动上的合照。蒂莉在推特上回忆自己与达赖喇嘛的互动（TillyLockey推特截图） 达赖喇嘛官方Youtube账号保留了这场近两个小时活动的完整视频，当时蒂莉笑着向达赖喇嘛展示科技的进步如何帮助她拥有了一双与众不同的手，达赖一开始表现得惊喜于女孩能开朗自信地操作智能手掌，并与她的机械手握手。两人真实的“肢体接触”发生在蒂莉向达赖讲述她的故事之后。她说，医生当时宣告才15个月大的她性命难保，而她却奇迹般地活了下来。达赖喇嘛听到这里时，拍抚了她的背。 被胡锡进引述的视频片断发生于活动尾声、视频约1小时45分35秒处，主持人请蒂莉再上台，坐在达赖喇嘛旁边，她摇摇晃晃的走上前时，达赖喇嘛伸出手抓住了她的上臂，扶她坐下，之后，他用右手在蒂莉的上臂上抚摸了几下。2018年活动现场，达赖喇嘛扶截肢女孩坐下后，抚摸她的上臂。（图/取自达赖喇嘛Youtube账号） 对比原视频发现，胡锡进引用的画面撷取达赖喇嘛抚摸上手臂的16秒视频，是经过放大处理的片段。原本现场全景的画面，被裁切到只有蒂莉与达赖喇嘛两个人。长期观察中国对外宣传的美国智库外交关系委员会东南亚事务资深研究员约书亚∙科兰兹克（JoshuaKurlantzick）认为，这种经后制、刻意放大“达赖喇嘛抚摸女孩手臂”做法，企图达到的传播效果或许是要让事件“看起来更糟糕，甚至有些危险。”胡锡进微博发贴展示被剪切的达赖喇嘛与蒂莉互动的视频，并称这是“性骚扰”。（胡锡进微博截图） 在亚洲事实查核实验室的问询下，蒂莉的经纪公司TaintedLtd也代表她首次回应了外界关注。公司在电邮信函中表示：“蒂莉当时和达赖喇嘛的接触完全只有善意与敬意，提出要让蒂莉回答对达赖喇嘛充满险恶用心的问题是让人感到不悦的。” 达赖喇嘛摸LadyGaga膝盖是怎么回事？胡锡进发布的另一则广为流传的视频，则是达赖喇嘛和美国歌手LadyGaga的互动，胡锡进表示，这证明了“达赖在公开场合搞变态、下流之举已非‘初犯’。”达赖和LadyGaga在一个活动上的视频片段再引发争议，胡锡进在其微博上转发。（微博截图） 亚洲事实查核实验室查证完整视频，该活动为2016年6月26日在美国印第安纳州举行的全美市长会议，二人在一个活动上谈论如何应对以善意和共情应对世界上的不公正。在视频开始的第一分钟，在主持人介绍本次活动时，达赖喇嘛低下头看LadyGaga牛仔裤上的破洞，并用手挠了挠她露出的膝盖，并看着她呵呵笑了几声，然后又伸手去挠另一只腿，LadyGaga抓住了他的手，也笑了几声。在接下来的一个小时里，活动正常进行。在关于该活动的另一个新闻剪辑中，达赖喇嘛与LadyGaga站着握手后，他又低下头去，似乎故意开玩笑的去碰LadyGaga的牛仔裤上的破洞，LadyGaga大笑，转头对镜头说“他喜欢我今天的装束”。在上述“舌头门”事件后，这个场景被剪切发布到推特，亚洲事实查核实验室目前找到的最早一条推文发布于4月12日，引发大量讨论、转发，许多评论认为达赖喇嘛的行为让人反感，是对女性的冒犯；也有人认为他是在开玩笑，称在很多文化背景中，身体接触很正常。在这条推文下方评论中，反感达赖喇嘛行为的评论明显占上风。针对这个视频，亚洲事实查核实验室并未找到LadyGaga本人或是达赖喇嘛对此事的声明。敏感词"达赖"忽然解禁“吸舌头”、“摸手臂”、“碰膝盖”——这三段涉及达赖喇嘛的视频都引发了不小争议，检视其原始视频和事后造成的影响，达赖喇嘛与对话者“亲密接触”的行为确实存在不少争议，例如在达兰萨拉与小男孩的接触，与LadyGaga对话时的举动；但也有一些被断章取义、刻意扭曲、夸大的情况，例如他和截肢女孩蒂莉的互动。然而在中国的互联网舆论场，亚洲事实查核实验室则发现了舆论操作的迹象。“达赖”——中国用以贬低达赖喇嘛的称呼，是中国互联网上长久以来的敏感词或禁忌词，这阵子突然在搜索引擎和社交媒体解禁，同时，在社交媒体上释放出大量、单一的负面消息。截至发稿为止，以“达赖”两字在新浪微博上搜索，累计共有2000个讨论标注、超过2000万次的阅读量，所有内容无一例外都是对达赖喇嘛的“揭批”。这个现象并不寻常，因为长久以来，“达赖”是很难出现在中国大陆的互联网讨论中的。达赖喇嘛的名字、照片在中国的公共空间都是长久以来的禁忌，德国之声曾报道，在四川藏区，有僧人曾因手机中保存有达赖的照片遭到官方抓捕。而自由亚洲电台曾报道，荷兰非营利组织GDI基金会的安全研究员葛弗斯（VictorGevers）研究、发布了触发微信审查的800多个中文“敏感词”列表，包括“达赖喇嘛”、“流亡藏人”等都在名单上。加拿大多伦多大学的公民实验室（CitizenLab）在2022年针对北京冬季奥运手机app“冬奥通”的研究也发现，“达赖喇嘛”、“尊者”都被列为敏感词。被列为敏感词后，置身于防火墙内的公众不仅不能自由发布含这些词汇的信息，甚至无法从微博、微信等社交媒体的搜索框内找到与之相关的信息。最典型的特征就是会出现“根据相关法律法规，该结果/部分搜索结果不予显示”。而此次“达赖”成为舆论热点，很可能是宣传官方刻意放开了对相关敏感词的管制。亚洲事实查核实验室已无法查证在“舌头门”事件之前微博、百度对于“达赖”等关键词的搜索结果，然而多位关注西藏议题的人士都表示，曾经历过此前中国国内对“达赖”等关键词的严管，这次事件后，很多人也观察到，中国内地互联网对达赖喇嘛的讨论，确实出现了突然的“井喷”。并且，在中国的搜索引擎和社交媒体上，用相关关键词能够搜索到的内容，只有一边倒的对“舌头门”事件的片面报道，以及类似上述两个旧视频等负面消息。其他关于达赖喇嘛相关近况消息、“舌头门”事件完整视频和当事人采访，都无法找到。内、外宣分进合击？也有观察人士怀疑，在中国之外，该事件的传播或也有中国方面的力量助推、操纵。在“舌头门”风波中，一名香港作者“Pazu薯伯伯”发帖分析了YouTube上几个最早期发布剪辑影片的帐户，发现至少有三个传播影片的帐户在2023年3月31日到4月6日间成立，而且一成立便马上发布“舌头门”片段，没有其他活动。另一个帐户在2020年1月1日成立，也没有发表过其它影片。因此有理由怀疑，这些账户是有人专门注册来发布这条信息的账户。亚洲事实查核实验室也发现，上述被歪曲的“达赖摸女孩手臂”视频，也在推特上经由丹尼尔·邓布里尔（DanielDumbrill）传播，这位目前定居中国的“网络博主”，曾在中国官媒宣传报道中被称为“西方谎言的揭露者”。结论达赖喇嘛在印度与小男孩的互动在全世界引发舆论海啸，基于不同社会文化背景，各界对该事件或批评、反感，或维护、赞扬，表达了多元意见。在此事件之后，有更多关于达赖“不当行为”的视频流出，例如被误读、扭曲的“英国女孩手臂事件”，也有确实引发争议和批评的“LadyGaga膝盖”事件。然而，“舌头门”风波后，在中国舆论场，对“达赖”等敏感词的讨论忽然解禁，并出现了一边倒的负面讯息和言论井喷的现象，不同于中国境外的多元意见表达。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
