--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,18 @@
 
+  ## 6/3/2023 - [美国国防部长抨击中国无意进行军事对话](https://www.voachinese.com/a/u-s-defense-chief-slams-china-for-lack-of-military-dialog-20230602/7121371.html)
+ ```美国国防部长劳埃德·奥斯汀周六表示，他对中国不愿就军事危机管控进行接触深表关切，并警告说会谈是避免冲突的关键。```0
+  ## 6/3/2023 - [又有两名“誓言守护者”因冲击国会山事件被判刑](https://www.voachinese.com/a/oath-keepers-convicted-of-storming-capitol-get-latest-extremist-sentencings-20230602/7121343.html)
+ ```两名极右翼组织“誓言守护者”的成员周五(6月2日)因煽动串谋和其他指控被判处三年监禁——这是与2021年1月6冲击国会山事件相关的最新判决。```0
+  ## 6/3/2023 - [即将成为欧盟轮值主席国的西班牙在西方对华关系中发挥关键作用](https://www.voachinese.com/a/spain-plays-key-role-for-west-in-relations-with-china-20230602/7121049.html)
+ ```西班牙在下个月担任欧盟轮值主席国时，将会寻求利用其与中国50年的关系，来和平解决俄罗斯对乌克兰发动的战争。```0
+  ## 6/3/2023 - [美财政部高官会晤中国驻美大使](https://www.voachinese.com/a/us-treasury-official-meets-with-china-s-new-ambassador-in-washington-20230602/7121331.html)
+ ```美国财政部说，财政部副部长杰伊·尚博格星期五(6月2日)会晤了新任中国驻美大使谢锋并进行了讨论，旨在保持这两个世界最大经济体沟通渠道的畅通。```0
+  ## 6/3/2023 - [美台签署21世纪贸易倡议首批协定，中国批美以经贸幌子对台“敲骨吸髓”](https://www.voachinese.com/a/us-taiwan-signed-trade-deal-which-beijing-said-it-strongly-opposes-20230602/7121058.html)
+ ```美国与台湾星期四(6月1日)在华盛顿签署美台《21世纪贸易倡议》首批协定，双方在全部12个议题中的五个议题达成共识。美台官员都表示，这是一个有助于加强并深化彼此经贸关系的重要里程碑。```0
+  ## 6/2/2023 - [美军最高将领：艾布拉姆斯坦克和F-16飞机是为了长期援乌，而非用于即将发动的反攻](https://www.voachinese.com/a/us-tanks-f-16s-part-of-long-term-aid-for-ukraine-not-upcoming-offensive-20230602/7121063.html)
+ ```美国参谋长联席会议主席、陆军上将马克·米利说，培训乌克兰军队使用先进的美制艾布拉姆斯坦克的工作已经开始，这些武器从长期来讲是把俄罗斯赶出乌克兰被占领土的关键，但是来不及用于基辅即将展开的反攻。```0
+  ## 6/2/2023 - [美中情局长伯恩斯秘密访华，再促两国关系融冰](https://www.voachinese.com/a/cia-dir-burns-secret-china-visit-shows-us-china-will-improve-relation-20230602/7120539.html)
+ ```美国中央情报局局长伯恩斯上个月曾秘密前往北京，这是拜登政府官员近年来对中国的最高级别访问。美中关系的观察人士认为，伯恩斯的秘密出访显示美中双方都有意缓和紧张关系。```0
   ## 6/2/2023 - [司法部：不会就在彭斯家中发现机密文件一事提起刑事指控](https://www.voachinese.com/a/justice-dept-won-t-charge-pence-over-handling-of-classified-documents-20230602/7120987.html)
  ```美国司法部已通知前副总统迈克·彭斯的法律团队，不会就在其印第安纳州的家中发现机密文件的事件提起刑事指控。```0
   ## 6/2/2023 - [
@@ -36,19 +50,3 @@
 
 ](https://www.voachinese.com/a/amid-shrinking-freedoms-hong-kongers-commemorate-tiananmen-anniversary-privately-20230602/7119986.html)
  ```即将到来的星期天（6月4日）将是天安门血腥屠杀事件34周年纪念日，但是多年来一直在六四当天举办大型纪念活动，公开向罹难者致哀致敬的港人现在却在国安法的阴霾与淫威下，被迫选择私下举行悼念活动。```0
-  ## 6/2/2023 - [人权观察呼吁北京承认对六四大屠杀的责任
-
-](https://www.voachinese.com/a/china-barred-34-years-after-bloody-tiananmen-massacre-20230602/7119991.html)
- ```六四天安门镇压事件三十四周年纪念日即将来临，总部设在美国纽约的人权观察呼吁中国政府承认自己在这场历史悲剧中应负的历史责任，为六四事件的死难者及其家属提供赔偿。```0
-  ## 6/2/2023 - [美中战略竞争之际 中国银行将在巴新设首家分行](https://www.voachinese.com/a/bank-of-china-chairman-visits-papua-new-guinea-amid-sino-us-strategic-rivalry-20230602/7119963.html)
- ```中国银行(BankofChina)董事长葛海蛟已前往南太平洋岛国巴布亚新几内亚，这家世界第四大银行寻求获得巴新的营业执照。巴新正在寻求推进与中国的贸易，并同时扩大与美国的防务关系。```0
-  ## 6/2/2023 - [中国往返美国4条新航班 避开俄罗斯领空](https://www.voachinese.com/a/us-china-flights-russia-20230602/7119928.html)
- ```美国于5月初同意将往返美国的中国籍航空公司航班增加到每周12趟，根据飞航追踪网站FlightAware的资料显示，这些新批准的航班避开了俄罗斯的领空。美中官方都并未说明是否要求航班避开俄罗斯领空，但对于两国之间增加直航抱持肯定态度。```0
-  ## 6/2/2023 - [美国参议院批准提高债务上限 以避免美国违约](https://www.voachinese.com/a/congress-approves-debt-limit-suspension-averting-default-20230602/7119922.html)
- ```美国参议院周四晚间（6月1日）通过了由总统拜登支持的两党立法，该立法提高了政府31.4万亿美元的债务上限，避免了有史以来的首次违约。```0
-  ## 6/2/2023 - [火力支援乌克兰 美国拟向日本购买TNT炸药](https://www.voachinese.com/a/us-seeking-tnt-from-japan-20230602/7119884.html)
- ```《路透社》引述两名知情人士报道，美国寻求自日本获得TNT炸药的供应，以用于填充155毫米炮弹，帮助乌克兰反击俄罗斯的军队。```0
-  ## 6/2/2023 - [由于中国不断镇压异议，“六四纪念馆”转战纽约市开放](https://www.voachinese.com/a/as-china-cracks-down-on-dissent-new-york-city-gives-refuge-to-exhibit-remembering-tiananmen-square-20230602/7119847.html)
- ```现年50多岁的周锋锁，对1989年那个令人沮丧的春天记忆犹新，当时坦克车开进了北京的天安门广场。当共产党的军队蜂拥而上强制结束民主抗议活动时，大学生们和许多人遭到殴打、流血，导致数百甚至数千人死亡。```0
-  ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
- ```震惊世界的天安门事件34周年来临之际，中共当局在党总书记习近平强行连任、经历三年疫情和白纸运动之后仍然一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是一再强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
